--- a/.github/workflows/marp.yml
+++ b/.github/workflows/marp.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run a one-line script
         run: |
-          npx -y @marp-team/marp-cli README.md -o docs/index.htm
+          npx -y @marp-team/marp-cli README.md -o index.htm
           git pull
           git config --global user.email "kazuhitoyokoi@nodered.jp"
           git config --global user.name "Kazuhito Yokoi"
